@@ -1,6 +1,7 @@
 2014-10-03 Nicolas Normand <nnormand@justcodeit.org>
 	* cppmt::Opts: can choose behavior when opening configuration file fails (report error, ignore error or direct exit).
 	* cppmt::Opts: can choose option (long and short) names for help and version, as well as help strings.
+	* cppmt::Opts: can set a prefix message for generated help.
 
 2014-10-02 Nicolas Normand <nnormand@justcodeit.org>
 	* cppmt::Opts: support for short options in configuration files, support for options without arguments in configuration files.
